<resources>
    <string name="app_name">Series App</string>

    <string name="item_show_image_description">Imagem da série</string>

    <string name="show_list_button_search">Pesquisar</string>

    <string name="show_details_button_save">SALVAR</string>
    <string name="show_details_summary">Summary</string>
    <string name="show_details_rating">Rating</string>
    <string name="show_details_genres">Genres</string>

    <string name="search">Pesquisar</string>

    <string name="dialog_error_something_went_wrong">Ops! Algo deu errado...</string>
    <string name="dialog_error_ok">OK</string>

    <string name="dialog_error_image">Imagem emoji triste\n</string>

    <string name="toolbar_favorite_image">Imagem favoritos da toolbar</string>
    <string name="toolbar_home_image">Imagem tela inicial da toolbar</string>
    <string name="toolbar_search_image">Imagem pesquisar da toolbar</string>
    <string name="splash_screen_image">Splash screen image</string>

</resources>