<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/orange"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        android:contentDescription="@string/dialog_error_image"
        app:srcCompat="@drawable/sad_emoji" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:text="@string/dialog_error_something_went_wrong"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/error_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/error_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@android:color/black"
        android:stateListAnimator="@null"
        android:text="@string/dialog_error_ok"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</LinearLayout>